--- a/requirements.txt
+++ b/requirements.txt
@@ -43,20 +43,57 @@ pytest-cov>=3.0.0
 black>=21.0.0
 flake8>=4.0.0
 
+# ========================================
 # 고정확도 OCR 엔진들 (선택적 설치)
-# 한국어 특화 OCR
-# pororo>=1.0.0
+# ========================================
 
-# 다국어 고정확도 OCR
+# 1순위: Pororo OCR (한국어 특화 - 최고 정확도)
+# 옵션 1: 가벼운 OCR 전용 버전 (권장)
+pororo-ocr>=1.0.2
+
+# 옵션 2: 전체 Pororo 라이브러리 (모든 NLP 기능 포함)
+# 주의: pororo-ocr과 함께 설치하지 마세요
+# pororo>=0.4.2
+
+# 2순위: PaddleOCR (다국어 고정확도)
 # paddleocr>=2.6.0
-# paddlepaddle>=2.4.0
+# paddlepaddle>=2.4.0  # CPU 버전
+# 또는 GPU 버전:
+# paddlepaddle-gpu>=2.4.0
 
-# 사용하기 쉬운 OCR
+# 3순위: EasyOCR (사용하기 쉬운 OCR)
 # easyocr>=1.6.0
 
+# ========================================
+# OCR 엔진 설치 가이드
+# ========================================
+
+# 기본 설치 (Tesseract + pororo-ocr):
+# pip install -r requirements.txt
+
+# 모든 OCR 엔진 설치:
+# pip install -r requirements.txt
+# pip install paddleocr paddlepaddle
+# pip install easyocr
+
+# GPU 가속 설치:
+# pip install -r requirements.txt
+# pip install paddleocr paddlepaddle-gpu
+# pip install easyocr
+# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+
+# ========================================
 # 선택적 의존성 (프로덕션 환경)
+# ========================================
+
 # PostgreSQL 사용시 주석 해제
 # psycopg2-binary>=2.9.0
 
 # Redis 사용시 주석 해제
 # redis>=4.0.0
+
+# 고급 이미지 처리
+# scikit-image>=0.19.0
+
+# 성능 모니터링
+# memory-profiler>=0.60.0
